SolShow layout: work in progress